--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+//index.html
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,10 +12,10 @@
     <div class="container">
         <h1>Oops!</h1>
         <p class="sub_tittle">You are lost</p>
-        <img src="/Group 1.png" alt="img" class="img_main">
+        <img src="/training-/Group 1.png" alt="img" class="img_main">
         <div>
             <a class="button" href="/">
-                <img src="/Arrow-28.png" alt="">
+                <img src="/training-/Arrow-28.png" alt="">
                 <p >Go home</p>
             </a>
             <hr>
